feat: complete SEO platform guide translations (en/zh/fr)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -491,5 +491,235 @@
     "faq_q4": "Which AI platform offers the most free credits?",
     "faq_a4": "The amount of free credits varies and changes frequently. Visit our platform pages for the most up-to-date comparison of free credit offerings across all major AI platforms.",
     "not_found": "Guide not found"
+  },
+  "PlatformGuide_common": {
+    "table_item": "Item",
+    "table_details": "Details",
+    "table_platform": "Platform",
+    "table_free_tier": "Free Tier",
+    "table_best_for": "Best For",
+    "active_campaigns": "Active Campaigns on AI Free Pool",
+    "faq_title": "Frequently Asked Questions",
+    "visit_official": "Visit Official Site",
+    "view_all_platforms": "Compare All AI Platforms"
+  },
+  "PlatformGuide_chatgpt": {
+    "meta_title": "ChatGPT Free Tier Guide 2026 – Free Limits, Pricing & Tips",
+    "meta_description": "Complete guide to ChatGPT free tier in 2026. Learn about free usage limits, GPT-4o access, paid plan comparison, and tips to maximize your free quota.",
+    "keywords": "ChatGPT free,ChatGPT free tier,GPT-4o free,OpenAI free,ChatGPT pricing 2026,ChatGPT Plus,ChatGPT Pro",
+    "title": "ChatGPT Free Tier Complete Guide",
+    "subtitle": "Everything you need to know about using ChatGPT for free in 2026, including limits, models, and how to get the most out of your free quota.",
+    "last_updated": "Last updated: February 2026",
+    "intro_title": "What is ChatGPT?",
+    "intro_p1": "ChatGPT is OpenAI's flagship conversational AI product, launched in November 2022. It has quickly become the world's most popular AI chatbot with over 200 million weekly active users. ChatGPT can help with writing, coding, analysis, math, creative tasks, and much more.",
+    "intro_p2": "OpenAI offers a generous free tier that gives everyone access to GPT-4o mini and limited GPT-4o usage. The free plan is perfect for casual users who want to experience cutting-edge AI without any cost.",
+    "feature_1_title": "GPT-4o Access",
+    "feature_1_desc": "Free users get limited access to GPT-4o, OpenAI's most capable model",
+    "feature_2_title": "Multi-modal",
+    "feature_2_desc": "Supports text, image input, and file uploads even on free tier",
+    "feature_3_title": "GPT Store",
+    "feature_3_desc": "Access thousands of custom GPTs built by the community",
+    "free_tier_title": "Free Tier Details",
+    "free_tier_intro": "ChatGPT's free tier provides substantial functionality. Here's exactly what you get:",
+    "free_row_1_label": "Base Model",
+    "free_row_1_value": "GPT-4o mini (unlimited within rate limits)",
+    "free_row_2_label": "Premium Model",
+    "free_row_2_value": "GPT-4o (limited messages per day, varies by demand)",
+    "free_row_3_label": "Features Included",
+    "free_row_3_value": "Web browsing, file uploads, image input, GPT Store access, basic data analysis",
+    "free_row_4_label": "Limitations",
+    "free_row_4_value": "No image generation (DALL·E), no advanced voice mode, lower rate limits during peak hours",
+    "free_tier_note": "Note: Free tier limits may vary based on server demand. OpenAI adjusts quotas dynamically.",
+    "pricing_title": "Paid Plans Comparison",
+    "plan_free_name": "Free",
+    "plan_free_price": "$0/mo",
+    "plan_free_feature_1": "GPT-4o mini unlimited",
+    "plan_free_feature_2": "Limited GPT-4o access",
+    "plan_free_feature_3": "Web browsing & file uploads",
+    "plan_plus_name": "Plus",
+    "plan_plus_price": "$20/mo",
+    "plan_plus_feature_1": "5x more GPT-4o messages",
+    "plan_plus_feature_2": "DALL·E image generation",
+    "plan_plus_feature_3": "Advanced voice mode",
+    "plan_pro_name": "Pro",
+    "plan_pro_price": "$200/mo",
+    "plan_pro_feature_1": "Unlimited GPT-4o & o1",
+    "plan_pro_feature_2": "o1 pro mode for complex tasks",
+    "plan_pro_feature_3": "Highest priority access",
+    "pricing_note": "Prices as of February 2026. OpenAI also offers Team ($25/user/mo) and Enterprise plans.",
+    "tips_title": "Tips to Maximize Your Free Quota",
+    "tip_1_title": "Use GPT-4o mini for routine tasks",
+    "tip_1_desc": "GPT-4o mini is fast and capable for most everyday tasks. Save your limited GPT-4o messages for complex reasoning or creative work.",
+    "tip_2_title": "Be specific in your prompts",
+    "tip_2_desc": "Clear, detailed prompts get better results in fewer messages, helping you stay within your daily limits.",
+    "tip_3_title": "Use custom GPTs",
+    "tip_3_desc": "Custom GPTs from the GPT Store come with pre-configured prompts and knowledge, saving you messages on setup.",
+    "tip_4_title": "Try the API free credits",
+    "tip_4_desc": "New OpenAI API accounts get free credits. If you're a developer, the API can be more cost-effective than a Plus subscription.",
+    "comparison_title": "ChatGPT vs Other Platforms",
+    "comp_row_1_platform": "ChatGPT (OpenAI)",
+    "comp_row_1_free": "GPT-4o mini unlimited + limited GPT-4o",
+    "comp_row_1_best": "General-purpose AI, writing, coding",
+    "comp_row_2_platform": "Claude (Anthropic)",
+    "comp_row_2_free": "Claude 3.5 Sonnet with daily message limit",
+    "comp_row_2_best": "Long documents, analysis, safety-focused",
+    "comp_row_3_platform": "Gemini (Google)",
+    "comp_row_3_free": "Gemini 2.0 Flash unlimited + limited Pro",
+    "comp_row_3_best": "Google integration, multimodal, research",
+    "comparison_note": "Free tier offerings change frequently. Visit each platform's page on AI Free Pool for the latest details.",
+    "faq_q1": "Is ChatGPT really free to use?",
+    "faq_a1": "Yes, ChatGPT offers a free tier with access to GPT-4o mini (unlimited) and limited GPT-4o messages. No credit card is required to sign up. The free tier includes web browsing, file uploads, and GPT Store access.",
+    "faq_q2": "How many free messages do I get per day on ChatGPT?",
+    "faq_a2": "GPT-4o mini messages are essentially unlimited within rate limits. GPT-4o messages on the free tier are limited and vary based on demand — typically around 10-16 messages per day. OpenAI adjusts this dynamically.",
+    "faq_q3": "Is ChatGPT Plus worth it over the free tier?",
+    "faq_a3": "If you use ChatGPT daily for work or creative projects, Plus is worth it for 5x more GPT-4o messages, DALL·E image generation, and advanced voice mode. For casual use, the free tier is sufficient.",
+    "cta_title": "Start Using ChatGPT for Free",
+    "cta_desc": "Sign up in seconds — no credit card required. Get instant access to GPT-4o mini and limited GPT-4o."
+  },
+  "PlatformGuide_claude": {
+    "meta_title": "Claude Free Tier Guide 2026 – Free Limits, Pricing & Tips",
+    "meta_description": "Complete guide to Claude free tier in 2026. Learn about free usage limits, Claude 3.5 Sonnet access, paid plan comparison, and tips to maximize your free quota.",
+    "keywords": "Claude free,Claude free tier,Anthropic free,Claude 3.5 Sonnet free,Claude pricing 2026,Claude Pro,Claude API",
+    "title": "Claude Free Tier Complete Guide",
+    "subtitle": "Everything you need to know about using Claude for free in 2026, including limits, models, and how to get the most out of your free quota.",
+    "last_updated": "Last updated: February 2026",
+    "intro_title": "What is Claude?",
+    "intro_p1": "Claude is Anthropic's conversational AI assistant, known for its strong reasoning capabilities, safety-first design, and exceptional performance on long-form content. Claude excels at analysis, writing, coding, and handling documents up to 200K tokens.",
+    "intro_p2": "Anthropic offers a free tier on claude.ai that gives everyone access to Claude 3.5 Sonnet with daily message limits. It's ideal for users who value thoughtful, nuanced AI responses.",
+    "feature_1_title": "200K Context",
+    "feature_1_desc": "Industry-leading context window for processing long documents and codebases",
+    "feature_2_title": "Safety-First",
+    "feature_2_desc": "Constitutional AI approach ensures helpful, harmless, and honest responses",
+    "feature_3_title": "Artifacts",
+    "feature_3_desc": "Create and iterate on documents, code, and visualizations in a side panel",
+    "free_tier_title": "Free Tier Details",
+    "free_tier_intro": "Claude's free tier on claude.ai provides access to powerful models. Here's what you get:",
+    "free_row_1_label": "Base Model",
+    "free_row_1_value": "Claude 3.5 Sonnet (daily message limit)",
+    "free_row_2_label": "Context Window",
+    "free_row_2_value": "200K tokens — upload long PDFs, codebases, and documents",
+    "free_row_3_label": "Features Included",
+    "free_row_3_value": "Artifacts, file uploads, image input, Projects (limited), web search",
+    "free_row_4_label": "Limitations",
+    "free_row_4_value": "Daily message cap (resets each day), no Claude 3 Opus, lower priority during peak hours",
+    "free_tier_note": "Note: Daily message limits vary based on demand. Anthropic adjusts quotas dynamically.",
+    "pricing_title": "Paid Plans Comparison",
+    "plan_free_name": "Free",
+    "plan_free_price": "$0/mo",
+    "plan_free_feature_1": "Claude 3.5 Sonnet with daily limit",
+    "plan_free_feature_2": "Artifacts & file uploads",
+    "plan_free_feature_3": "200K context window",
+    "plan_plus_name": "Pro",
+    "plan_plus_price": "$20/mo",
+    "plan_plus_feature_1": "5x more Claude 3.5 Sonnet usage",
+    "plan_plus_feature_2": "Claude 3 Opus access",
+    "plan_plus_feature_3": "Priority access & Projects",
+    "plan_pro_name": "Team",
+    "plan_pro_price": "$25/user/mo",
+    "plan_pro_feature_1": "Higher usage limits",
+    "plan_pro_feature_2": "Admin & billing tools",
+    "plan_pro_feature_3": "Shared team Projects",
+    "pricing_note": "Prices as of February 2026. Anthropic also offers Enterprise plans with custom pricing.",
+    "tips_title": "Tips to Maximize Your Free Quota",
+    "tip_1_title": "Upload documents instead of pasting",
+    "tip_1_desc": "Claude's 200K context window shines with file uploads. Upload PDFs and let Claude analyze them in one message instead of multiple.",
+    "tip_2_title": "Use Projects to save context",
+    "tip_2_desc": "Projects let you set persistent instructions and upload reference files, so you don't waste messages re-explaining context.",
+    "tip_3_title": "Be thorough in your first message",
+    "tip_3_desc": "Claude excels at long, detailed responses. Give it all the context upfront to get comprehensive answers in fewer turns.",
+    "tip_4_title": "Try the API free credits",
+    "tip_4_desc": "New Anthropic API accounts receive free credits. The API offers more granular control and can be more cost-effective for developers.",
+    "comparison_title": "Claude vs Other Platforms",
+    "comp_row_1_platform": "Claude (Anthropic)",
+    "comp_row_1_free": "Claude 3.5 Sonnet with daily message limit",
+    "comp_row_1_best": "Long documents, analysis, nuanced writing",
+    "comp_row_2_platform": "ChatGPT (OpenAI)",
+    "comp_row_2_free": "GPT-4o mini unlimited + limited GPT-4o",
+    "comp_row_2_best": "General-purpose AI, plugins, image generation",
+    "comp_row_3_platform": "Gemini (Google)",
+    "comp_row_3_free": "Gemini 2.0 Flash unlimited + limited Pro",
+    "comp_row_3_best": "Google integration, multimodal, research",
+    "comparison_note": "Free tier offerings change frequently. Visit each platform's page on AI Free Pool for the latest details.",
+    "faq_q1": "Is Claude free to use?",
+    "faq_a1": "Yes, Claude offers a free tier on claude.ai with access to Claude 3.5 Sonnet. You get a daily message limit that resets each day. No credit card required.",
+    "faq_q2": "What is Claude's context window?",
+    "faq_a2": "Claude supports up to 200K tokens of context — that's roughly 150,000 words or a 500-page book. This applies to both free and paid tiers.",
+    "faq_q3": "Is Claude Pro worth it?",
+    "faq_a3": "If you rely on Claude for daily work, Pro gives you 5x more messages, access to Claude 3 Opus, and priority during peak hours. For occasional use, the free tier works well.",
+    "cta_title": "Start Using Claude for Free",
+    "cta_desc": "Sign up at claude.ai — no credit card required. Get instant access to Claude 3.5 Sonnet with 200K context."
+  },
+  "PlatformGuide_gemini": {
+    "meta_title": "Gemini Free Tier Guide 2026 – Free Limits, Pricing & Tips",
+    "meta_description": "Complete guide to Google Gemini free tier in 2026. Learn about free usage limits, Gemini 2.0 Flash access, paid plan comparison, and tips to maximize your free quota.",
+    "keywords": "Gemini free,Google Gemini free tier,Gemini 2.0 Flash free,Google AI free,Gemini pricing 2026,Gemini Advanced,Google AI Studio",
+    "title": "Gemini Free Tier Complete Guide",
+    "subtitle": "Everything you need to know about using Google Gemini for free in 2026, including limits, models, and how to get the most out of your free quota.",
+    "last_updated": "Last updated: February 2026",
+    "intro_title": "What is Gemini?",
+    "intro_p1": "Gemini is Google's flagship AI platform, deeply integrated with the Google ecosystem including Search, Gmail, Docs, and more. Gemini 2.0 represents Google's most capable AI models, offering strong multimodal capabilities across text, images, audio, and video.",
+    "intro_p2": "Google offers a generous free tier through gemini.google.com and Google AI Studio. Free users get unlimited access to Gemini 2.0 Flash and limited access to Gemini 2.0 Pro, making it one of the most accessible AI platforms available.",
+    "feature_1_title": "Google Integration",
+    "feature_1_desc": "Works seamlessly with Gmail, Docs, Drive, and other Google services",
+    "feature_2_title": "Multimodal",
+    "feature_2_desc": "Natively understands text, images, audio, video, and code",
+    "feature_3_title": "1M Token Context",
+    "feature_3_desc": "Gemini Pro offers up to 1 million token context window",
+    "free_tier_title": "Free Tier Details",
+    "free_tier_intro": "Google offers generous free access to Gemini. Here's what you get:",
+    "free_row_1_label": "Base Model",
+    "free_row_1_value": "Gemini 2.0 Flash (unlimited within rate limits)",
+    "free_row_2_label": "Premium Model",
+    "free_row_2_value": "Gemini 2.0 Pro (limited messages per day)",
+    "free_row_3_label": "Features Included",
+    "free_row_3_value": "Web search, image generation, file uploads, Google Workspace integration, code execution",
+    "free_row_4_label": "Limitations",
+    "free_row_4_value": "No Gemini Advanced features, limited Pro model access, lower priority during peak hours",
+    "free_tier_note": "Note: Google also offers free API access through Google AI Studio with generous rate limits for Gemini 2.0 Flash.",
+    "pricing_title": "Paid Plans Comparison",
+    "plan_free_name": "Free",
+    "plan_free_price": "$0/mo",
+    "plan_free_feature_1": "Gemini 2.0 Flash unlimited",
+    "plan_free_feature_2": "Limited Gemini 2.0 Pro access",
+    "plan_free_feature_3": "Web search & file uploads",
+    "plan_plus_name": "Advanced",
+    "plan_plus_price": "$19.99/mo",
+    "plan_plus_feature_1": "Full Gemini 2.0 Pro access",
+    "plan_plus_feature_2": "1M token context window",
+    "plan_plus_feature_3": "Google One AI Premium included",
+    "plan_pro_name": "Business",
+    "plan_pro_price": "$24/user/mo",
+    "plan_pro_feature_1": "Enterprise-grade security",
+    "plan_pro_feature_2": "Admin controls & audit logs",
+    "plan_pro_feature_3": "Advanced data protection",
+    "pricing_note": "Prices as of February 2026. Gemini Advanced is included with Google One AI Premium plan.",
+    "tips_title": "Tips to Maximize Your Free Quota",
+    "tip_1_title": "Use Gemini 2.0 Flash for most tasks",
+    "tip_1_desc": "Flash is fast and capable for everyday tasks. Save your limited Pro messages for complex reasoning or research.",
+    "tip_2_title": "Leverage Google integration",
+    "tip_2_desc": "Gemini works natively with Gmail, Docs, and Drive. Use @mentions in Google Workspace to get AI help without leaving your workflow.",
+    "tip_3_title": "Try Google AI Studio",
+    "tip_3_desc": "Google AI Studio offers free API access with generous rate limits. Great for developers who want to build with Gemini.",
+    "tip_4_title": "Use multimodal inputs",
+    "tip_4_desc": "Gemini excels at understanding images, audio, and video. Upload media files to get more value from each conversation turn.",
+    "comparison_title": "Gemini vs Other Platforms",
+    "comp_row_1_platform": "Gemini (Google)",
+    "comp_row_1_free": "Gemini 2.0 Flash unlimited + limited Pro",
+    "comp_row_1_best": "Google integration, multimodal, research",
+    "comp_row_2_platform": "ChatGPT (OpenAI)",
+    "comp_row_2_free": "GPT-4o mini unlimited + limited GPT-4o",
+    "comp_row_2_best": "General-purpose AI, writing, coding",
+    "comp_row_3_platform": "Claude (Anthropic)",
+    "comp_row_3_free": "Claude 3.5 Sonnet with daily message limit",
+    "comp_row_3_best": "Long documents, analysis, safety-focused",
+    "comparison_note": "Free tier offerings change frequently. Visit each platform's page on AI Free Pool for the latest details.",
+    "faq_q1": "Is Gemini free to use?",
+    "faq_a1": "Yes, Google offers a free tier with unlimited Gemini 2.0 Flash and limited Gemini 2.0 Pro access. No credit card required. Google AI Studio also provides free API access.",
+    "faq_q2": "What is Gemini's context window?",
+    "faq_a2": "Gemini 2.0 Flash supports up to 1 million tokens of context. Gemini 2.0 Pro also supports 1M tokens with Gemini Advanced. This is the largest context window among major AI platforms.",
+    "faq_q3": "Is Gemini Advanced worth it?",
+    "faq_a3": "If you're already in the Google ecosystem, Gemini Advanced at $19.99/mo is great value — it includes Google One AI Premium (2TB storage) plus full Gemini 2.0 Pro access with 1M context.",
+    "cta_title": "Start Using Gemini for Free",
+    "cta_desc": "Visit gemini.google.com — no credit card required. Get instant access to Gemini 2.0 Flash with multimodal capabilities."
   }
 }
