--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -543,5 +543,235 @@
     "faq_q4": "哪个AI平台提供最多的免费额度？",
     "faq_a4": "免费额度的数量经常变化。请访问我们的平台页面，获取所有主要AI平台免费额度的最新对比。",
     "not_found": "指南未找到"
+  },
+  "PlatformGuide_common": {
+    "table_item": "项目",
+    "table_details": "详情",
+    "table_platform": "平台",
+    "table_free_tier": "免费额度",
+    "table_best_for": "最适合",
+    "active_campaigns": "AI Free Pool 上的活跃活动",
+    "faq_title": "常见问题",
+    "visit_official": "访问官网",
+    "view_all_platforms": "对比所有AI平台"
+  },
+  "PlatformGuide_chatgpt": {
+    "meta_title": "ChatGPT 免费版指南 2026 – 免费额度、定价与技巧",
+    "meta_description": "2026年ChatGPT免费版完整指南。了解免费使用限制、GPT-4o访问权限、付费方案对比，以及最大化免费额度的技巧。",
+    "keywords": "ChatGPT免费,ChatGPT免费版,GPT-4o免费,OpenAI免费,ChatGPT定价2026,ChatGPT Plus,ChatGPT Pro",
+    "title": "ChatGPT 免费版完整指南",
+    "subtitle": "2026年ChatGPT免费使用的全面指南，包括限制、模型和最大化免费额度的方法。",
+    "last_updated": "最后更新：2026年2月",
+    "intro_title": "什么是 ChatGPT？",
+    "intro_p1": "ChatGPT 是 OpenAI 的旗舰对话式AI产品，于2022年11月推出。它已迅速成为全球最受欢迎的AI聊天机器人，每周活跃用户超过2亿。ChatGPT 可以帮助写作、编程、分析、数学、创意任务等。",
+    "intro_p2": "OpenAI 提供慷慨的免费版，让所有人都能使用 GPT-4o mini 和有限的 GPT-4o。免费方案非常适合想要体验前沿AI的普通用户。",
+    "feature_1_title": "GPT-4o 访问",
+    "feature_1_desc": "免费用户可有限使用 GPT-4o，OpenAI 最强大的模型",
+    "feature_2_title": "多模态",
+    "feature_2_desc": "免费版即支持文本、图片输入和文件上传",
+    "feature_3_title": "GPT 商店",
+    "feature_3_desc": "访问社区构建的数千个自定义 GPT",
+    "free_tier_title": "免费版详情",
+    "free_tier_intro": "ChatGPT 免费版提供丰富的功能。以下是具体内容：",
+    "free_row_1_label": "基础模型",
+    "free_row_1_value": "GPT-4o mini（在速率限制内无限使用）",
+    "free_row_2_label": "高级模型",
+    "free_row_2_value": "GPT-4o（每日消息数有限，根据需求变化）",
+    "free_row_3_label": "包含功能",
+    "free_row_3_value": "网页浏览、文件上传、图片输入、GPT商店访问、基础数据分析",
+    "free_row_4_label": "限制",
+    "free_row_4_value": "无图片生成（DALL·E）、无高级语音模式、高峰时段速率较低",
+    "free_tier_note": "注意：免费版限制可能根据服务器需求变化。OpenAI 会动态调整配额。",
+    "pricing_title": "付费方案对比",
+    "plan_free_name": "免费版",
+    "plan_free_price": "$0/月",
+    "plan_free_feature_1": "GPT-4o mini 无限使用",
+    "plan_free_feature_2": "有限的 GPT-4o 访问",
+    "plan_free_feature_3": "网页浏览和文件上传",
+    "plan_plus_name": "Plus",
+    "plan_plus_price": "$20/月",
+    "plan_plus_feature_1": "5倍 GPT-4o 消息量",
+    "plan_plus_feature_2": "DALL·E 图片生成",
+    "plan_plus_feature_3": "高级语音模式",
+    "plan_pro_name": "Pro",
+    "plan_pro_price": "$200/月",
+    "plan_pro_feature_1": "无限 GPT-4o 和 o1",
+    "plan_pro_feature_2": "o1 pro 模式处理复杂任务",
+    "plan_pro_feature_3": "最高优先级访问",
+    "pricing_note": "价格截至2026年2月。OpenAI 还提供 Team（$25/用户/月）和 Enterprise 方案。",
+    "tips_title": "最大化免费额度的技巧",
+    "tip_1_title": "日常任务使用 GPT-4o mini",
+    "tip_1_desc": "GPT-4o mini 快速且强大，适合大多数日常任务。将有限的 GPT-4o 消息留给复杂推理或创意工作。",
+    "tip_2_title": "提示词要具体",
+    "tip_2_desc": "清晰、详细的提示词能用更少的消息获得更好的结果，帮助你保持在每日限额内。",
+    "tip_3_title": "使用自定义 GPT",
+    "tip_3_desc": "GPT 商店中的自定义 GPT 带有预配置的提示词和知识，节省你的设置消息。",
+    "tip_4_title": "尝试 API 免费额度",
+    "tip_4_desc": "新的 OpenAI API 账户可获得免费额度。如果你是开发者，API 可能比 Plus 订阅更划算。",
+    "comparison_title": "ChatGPT 与其他平台对比",
+    "comp_row_1_platform": "ChatGPT (OpenAI)",
+    "comp_row_1_free": "GPT-4o mini 无限 + 有限 GPT-4o",
+    "comp_row_1_best": "通用AI、写作、编程",
+    "comp_row_2_platform": "Claude (Anthropic)",
+    "comp_row_2_free": "Claude 3.5 Sonnet 每日消息限制",
+    "comp_row_2_best": "长文档、分析、安全优先",
+    "comp_row_3_platform": "Gemini (Google)",
+    "comp_row_3_free": "Gemini 2.0 Flash 无限 + 有限 Pro",
+    "comp_row_3_best": "Google 集成、多模态、研究",
+    "comparison_note": "免费额度经常变化。请访问 AI Free Pool 上各平台页面获取最新详情。",
+    "faq_q1": "ChatGPT 真的免费吗？",
+    "faq_a1": "是的，ChatGPT 提供免费版，可使用 GPT-4o mini（无限）和有限的 GPT-4o 消息。无需信用卡即可注册。免费版包含网页浏览、文件上传和 GPT 商店访问。",
+    "faq_q2": "ChatGPT 每天有多少免费消息？",
+    "faq_a2": "GPT-4o mini 消息在速率限制内基本无限。免费版的 GPT-4o 消息有限，根据需求变化——通常每天约10-16条。OpenAI 会动态调整。",
+    "faq_q3": "ChatGPT Plus 比免费版值得吗？",
+    "faq_a3": "如果你每天使用 ChatGPT 工作或创作，Plus 值得购买，可获得5倍 GPT-4o 消息、DALL·E 图片生成和高级语音模式。休闲使用的话，免费版就够了。",
+    "cta_title": "免费开始使用 ChatGPT",
+    "cta_desc": "几秒钟即可注册——无需信用卡。立即获得 GPT-4o mini 和有限 GPT-4o 的访问权限。"
+  },
+  "PlatformGuide_claude": {
+    "meta_title": "Claude 免费版指南 2026 – 免费额度、定价与技巧",
+    "meta_description": "2026年Claude免费版完整指南。了解免费使用限制、Claude 3.5 Sonnet访问权限、付费方案对比，以及最大化免费额度的技巧。",
+    "keywords": "Claude免费,Claude免费版,Anthropic免费,Claude 3.5 Sonnet免费,Claude定价2026,Claude Pro,Claude API",
+    "title": "Claude 免费版完整指南",
+    "subtitle": "2026年Claude免费使用的全面指南，包括限制、模型和最大化免费额度的方法。",
+    "last_updated": "最后更新：2026年2月",
+    "intro_title": "什么是 Claude？",
+    "intro_p1": "Claude 是 Anthropic 的对话式AI助手，以强大的推理能力、安全优先的设计和出色的长文本处理能力著称。Claude 擅长分析、写作、编程和处理最多20万token的文档。",
+    "intro_p2": "Anthropic 在 claude.ai 上提供免费版，让所有人都能使用 Claude 3.5 Sonnet，每日有消息限制。非常适合重视深思熟虑、细致入微的AI回复的用户。",
+    "feature_1_title": "200K 上下文",
+    "feature_1_desc": "业界领先的上下文窗口，可处理长文档和代码库",
+    "feature_2_title": "安全优先",
+    "feature_2_desc": "宪法AI方法确保有帮助、无害且诚实的回复",
+    "feature_3_title": "Artifacts",
+    "feature_3_desc": "在侧面板中创建和迭代文档、代码和可视化内容",
+    "free_tier_title": "免费版详情",
+    "free_tier_intro": "Claude 在 claude.ai 上的免费版提供强大模型的访问权限。以下是具体内容：",
+    "free_row_1_label": "基础模型",
+    "free_row_1_value": "Claude 3.5 Sonnet（每日消息限制）",
+    "free_row_2_label": "上下文窗口",
+    "free_row_2_value": "200K token——可上传长PDF、代码库和文档",
+    "free_row_3_label": "包含功能",
+    "free_row_3_value": "Artifacts、文件上传、图片输入、Projects（有限）、网页搜索",
+    "free_row_4_label": "限制",
+    "free_row_4_value": "每日消息上限（每天重置）、无 Claude 3 Opus、高峰时段优先级较低",
+    "free_tier_note": "注意：每日消息限制根据需求变化。Anthropic 会动态调整配额。",
+    "pricing_title": "付费方案对比",
+    "plan_free_name": "免费版",
+    "plan_free_price": "$0/月",
+    "plan_free_feature_1": "Claude 3.5 Sonnet 每日限制",
+    "plan_free_feature_2": "Artifacts 和文件上传",
+    "plan_free_feature_3": "200K 上下文窗口",
+    "plan_plus_name": "Pro",
+    "plan_plus_price": "$20/月",
+    "plan_plus_feature_1": "5倍 Claude 3.5 Sonnet 使用量",
+    "plan_plus_feature_2": "Claude 3 Opus 访问",
+    "plan_plus_feature_3": "优先访问和 Projects",
+    "plan_pro_name": "Team",
+    "plan_pro_price": "$25/用户/月",
+    "plan_pro_feature_1": "更高使用限制",
+    "plan_pro_feature_2": "管理和计费工具",
+    "plan_pro_feature_3": "共享团队 Projects",
+    "pricing_note": "价格截至2026年2月。Anthropic 还提供自定义定价的 Enterprise 方案。",
+    "tips_title": "最大化免费额度的技巧",
+    "tip_1_title": "上传文档而非粘贴",
+    "tip_1_desc": "Claude 的200K上下文窗口在文件上传时表现出色。上传PDF让Claude一次性分析，而非多次消息。",
+    "tip_2_title": "使用 Projects 保存上下文",
+    "tip_2_desc": "Projects 让你设置持久指令和上传参考文件，避免浪费消息重复解释上下文。",
+    "tip_3_title": "第一条消息要详尽",
+    "tip_3_desc": "Claude 擅长长篇详细回复。一次性提供所有上下文，用更少的对话轮次获得全面答案。",
+    "tip_4_title": "尝试 API 免费额度",
+    "tip_4_desc": "新的 Anthropic API 账户可获得免费额度。API 提供更精细的控制，对开发者来说可能更划算。",
+    "comparison_title": "Claude 与其他平台对比",
+    "comp_row_1_platform": "Claude (Anthropic)",
+    "comp_row_1_free": "Claude 3.5 Sonnet 每日消息限制",
+    "comp_row_1_best": "长文档、分析、细致写作",
+    "comp_row_2_platform": "ChatGPT (OpenAI)",
+    "comp_row_2_free": "GPT-4o mini 无限 + 有限 GPT-4o",
+    "comp_row_2_best": "通用AI、插件、图片生成",
+    "comp_row_3_platform": "Gemini (Google)",
+    "comp_row_3_free": "Gemini 2.0 Flash 无限 + 有限 Pro",
+    "comp_row_3_best": "Google 集成、多模态、研究",
+    "comparison_note": "免费额度经常变化。请访问 AI Free Pool 上各平台页面获取最新详情。",
+    "faq_q1": "Claude 可以免费使用吗？",
+    "faq_a1": "是的，Claude 在 claude.ai 上提供免费版，可使用 Claude 3.5 Sonnet。每日有消息限制，每天重置。无需信用卡。",
+    "faq_q2": "Claude 的上下文窗口有多大？",
+    "faq_a2": "Claude 支持最多200K token的上下文——大约15万字或一本500页的书。免费版和付费版都适用。",
+    "faq_q3": "Claude Pro 值得购买吗？",
+    "faq_a3": "如果你每天依赖 Claude 工作，Pro 提供5倍消息量、Claude 3 Opus 访问和高峰时段优先权。偶尔使用的话，免费版就够了。",
+    "cta_title": "免费开始使用 Claude",
+    "cta_desc": "在 claude.ai 注册——无需信用卡。立即获得 Claude 3.5 Sonnet 和200K上下文的访问权限。"
+  },
+  "PlatformGuide_gemini": {
+    "meta_title": "Gemini 免费版指南 2026 – 免费额度、定价与技巧",
+    "meta_description": "2026年Google Gemini免费版完整指南。了解免费使用限制、Gemini 2.0 Flash访问权限、付费方案对比，以及最大化免费额度的技巧。",
+    "keywords": "Gemini免费,Google Gemini免费版,Gemini 2.0 Flash免费,Google AI免费,Gemini定价2026,Gemini Advanced,Google AI Studio",
+    "title": "Gemini 免费版完整指南",
+    "subtitle": "2026年Google Gemini免费使用的全面指南，包括限制、模型和最大化免费额度的方法。",
+    "last_updated": "最后更新：2026年2月",
+    "intro_title": "什么是 Gemini？",
+    "intro_p1": "Gemini 是 Google 的旗舰AI平台，与 Google 生态系统深度集成，包括搜索、Gmail、Docs 等。Gemini 2.0 代表 Google 最强大的AI模型，在文本、图片、音频和视频方面提供强大的多模态能力。",
+    "intro_p2": "Google 通过 gemini.google.com 和 Google AI Studio 提供慷慨的免费版。免费用户可无限使用 Gemini 2.0 Flash 和有限使用 Gemini 2.0 Pro，使其成为最易获取的AI平台之一。",
+    "feature_1_title": "Google 集成",
+    "feature_1_desc": "与 Gmail、Docs、Drive 和其他 Google 服务无缝协作",
+    "feature_2_title": "多模态",
+    "feature_2_desc": "原生理解文本、图片、音频、视频和代码",
+    "feature_3_title": "100万 Token 上下文",
+    "feature_3_desc": "Gemini Pro 提供最多100万token的上下文窗口",
+    "free_tier_title": "免费版详情",
+    "free_tier_intro": "Google 提供慷慨的 Gemini 免费访问。以下是具体内容：",
+    "free_row_1_label": "基础模型",
+    "free_row_1_value": "Gemini 2.0 Flash（在速率限制内无限使用）",
+    "free_row_2_label": "高级模型",
+    "free_row_2_value": "Gemini 2.0 Pro（每日消息数有限）",
+    "free_row_3_label": "包含功能",
+    "free_row_3_value": "网页搜索、图片生成、文件上传、Google Workspace 集成、代码执行",
+    "free_row_4_label": "限制",
+    "free_row_4_value": "无 Gemini Advanced 功能、有限的 Pro 模型访问、高峰时段优先级较低",
+    "free_tier_note": "注意：Google 还通过 Google AI Studio 提供免费API访问，Gemini 2.0 Flash 有慷慨的速率限制。",
+    "pricing_title": "付费方案对比",
+    "plan_free_name": "免费版",
+    "plan_free_price": "$0/月",
+    "plan_free_feature_1": "Gemini 2.0 Flash 无限使用",
+    "plan_free_feature_2": "有限的 Gemini 2.0 Pro 访问",
+    "plan_free_feature_3": "网页搜索和文件上传",
+    "plan_plus_name": "Advanced",
+    "plan_plus_price": "$19.99/月",
+    "plan_plus_feature_1": "完整 Gemini 2.0 Pro 访问",
+    "plan_plus_feature_2": "100万 token 上下文窗口",
+    "plan_plus_feature_3": "包含 Google One AI Premium",
+    "plan_pro_name": "Business",
+    "plan_pro_price": "$24/用户/月",
+    "plan_pro_feature_1": "企业级安全",
+    "plan_pro_feature_2": "管理控制和审计日志",
+    "plan_pro_feature_3": "高级数据保护",
+    "pricing_note": "价格截至2026年2月。Gemini Advanced 包含在 Google One AI Premium 方案中。",
+    "tips_title": "最大化免费额度的技巧",
+    "tip_1_title": "大多数任务使用 Gemini 2.0 Flash",
+    "tip_1_desc": "Flash 快速且强大，适合日常任务。将有限的 Pro 消息留给复杂推理或研究。",
+    "tip_2_title": "利用 Google 集成",
+    "tip_2_desc": "Gemini 与 Gmail、Docs 和 Drive 原生协作。在 Google Workspace 中使用 @提及获取AI帮助，无需离开工作流。",
+    "tip_3_title": "尝试 Google AI Studio",
+    "tip_3_desc": "Google AI Studio 提供免费API访问，速率限制慷慨。非常适合想要使用 Gemini 构建应用的开发者。",
+    "tip_4_title": "使用多模态输入",
+    "tip_4_desc": "Gemini 擅长理解图片、音频和视频。上传媒体文件，从每次对话中获取更多价值。",
+    "comparison_title": "Gemini 与其他平台对比",
+    "comp_row_1_platform": "Gemini (Google)",
+    "comp_row_1_free": "Gemini 2.0 Flash 无限 + 有限 Pro",
+    "comp_row_1_best": "Google 集成、多模态、研究",
+    "comp_row_2_platform": "ChatGPT (OpenAI)",
+    "comp_row_2_free": "GPT-4o mini 无限 + 有限 GPT-4o",
+    "comp_row_2_best": "通用AI、写作、编程",
+    "comp_row_3_platform": "Claude (Anthropic)",
+    "comp_row_3_free": "Claude 3.5 Sonnet 每日消息限制",
+    "comp_row_3_best": "长文档、分析、安全优先",
+    "comparison_note": "免费额度经常变化。请访问 AI Free Pool 上各平台页面获取最新详情。",
+    "faq_q1": "Gemini 可以免费使用吗？",
+    "faq_a1": "是的，Google 提供免费版，可无限使用 Gemini 2.0 Flash 和有限使用 Gemini 2.0 Pro。无需信用卡。Google AI Studio 还提供免费API访问。",
+    "faq_q2": "Gemini 的上下文窗口有多大？",
+    "faq_a2": "Gemini 2.0 Flash 支持最多100万token的上下文。Gemini 2.0 Pro 配合 Gemini Advanced 也支持100万token。这是主要AI平台中最大的上下文窗口。",
+    "faq_q3": "Gemini Advanced 值得购买吗？",
+    "faq_a3": "如果你已在 Google 生态系统中，Gemini Advanced $19.99/月很有价值——包含 Google One AI Premium（2TB存储）加上完整的 Gemini 2.0 Pro 访问和100万上下文。",
+    "cta_title": "免费开始使用 Gemini",
+    "cta_desc": "访问 gemini.google.com——无需信用卡。立即获得 Gemini 2.0 Flash 和多模态功能的访问权限。"
   }
 }
